fixed code overflow

--- a/_sass/_pre.scss
+++ b/_sass/_pre.scss
@@ -22,7 +22,7 @@ pre {
     max-width: auto;
     padding: 0;
     margin: 0;
-    overflow: visible;
+    overflow: scroll;
     line-height: inherit;
     word-wrap: normal;
     background-color: transparent;
